List.of to Arrays.asList